# nonebot-adapter-chaoxing

./: README.md  pyproject.toml
nonebot/adapters/chaoxing/: adapter.py  bot.py  config.py  event.py
test/: event.json
