[project]
name = "nonebot-adapter-chaoxing"
version = "0.0.5"
description = "Nonebot2 Adapter for 超星学习通"
authors = [{ name = "YangRucheng", email = "admin@yangrucheng.top" }]
dependencies = ["nonebot2>=2.3.0"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/YangRucheng/nonebot-adapter-chaoxing"
repository = "https://github.com/YangRucheng/nonebot-adapter-chaoxing"

[tool.pdm.dev-dependencies]
i18n = ["babel ~=2.11"]
dev = ["ruff~=0.6.0", "pre-commit~=3.1"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901", "T201", "E402"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
